# MPCC_controller_ipopt

./: .gitignore  CMakeLists.txt  DOCS.md  MPCC_controller.cpp  README.md  main.cpp  plotter.cpp  rl_manager.cpp  run.sh  utils.cpp
build_hsl/: MPCC_controller_cpp  Makefile
data/: raceline.csv
demo/C++/Constraints/: soft_constraints.cpp:Zone.Identifier
demo/vehicle_dynamics_models/base_vehicle_model/include/base_vehicle_model/: base_vehicle_model_state.hpp:Zone.Identifier
include/: MPCC_controller.cpp.h  MPCC_controller.h  MPCC_planner.h  main.h  pid.h  plotter.h  rl_manager.h  utils.h  yaml_loader.h
params/: car7_mpcc_tuning.yaml  car7_vehicle.yaml  mpcc_tuning.yaml  vehicle.yaml
scripts/: playback_dashboard_csv.py  viz.py
